--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_USERNAME}
@@ -15,7 +15,7 @@ server.error.include-stacktrace=never
 app.secret-key=${TOKEN_SECRET:s/4KMb61LOrMYYAn4rfaQYSgr+le5SMrsMzKw8G6bXc=}
 
 #60*30 =1800  --> Token is valid for 30 minutes
-app.token-expiration = 1800  
+app.token-expiration = 1800
 app.token-issuer=dat.kea
 
 # Default role for new users added via the API (POST: /api/user-with-role).
